Templates/networking.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: |
  This CloudFormation template is for a portfolio website, including a VPC, subnets, an ALB, and two EC2 instances.

Resources:
  portfoliovpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      Tags:
        - Key: application
          Value: portfolio

  vpcigw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: application
          Value: portfolio

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref portfoliovpc
      InternetGatewayId: !Ref vpcigw

  publicsubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0, !GetAZs '']
      VpcId: !Ref portfoliovpc
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true

  publicsubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [1, !GetAZs '']
      VpcId: !Ref portfoliovpc
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: true

  albsecuritygroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access to the ALB from the internet
      VpcId: !Ref portfoliovpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

  EC2InstanceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Access from the ALB to the EC2 instances
      VpcId: !Ref portfoliovpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref albsecuritygroup

  Instance1:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0f3f3bd2e20420986
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref EC2InstanceSG
      SubnetId: !Ref publicsubnet1
      UserData:
        Fn::Base64: |
          #!/bin/bash
          sudo yum update -y
          sudo yum install -y httpd
          sudo systemctl start httpd
          sudo systemctl enable httpd
          echo "<h1>Welcome to Portfolio Instance 1</h1>" > /var/www/html/index.html

  Instance2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0f3f3bd2e20420986
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref EC2InstanceSG
      SubnetId: !Ref publicsubnet2
      UserData:
        Fn::Base64: |
          #!/bin/bash
          sudo yum update -y
          sudo yum install -y httpd
          sudo systemctl start httpd
          sudo systemctl enable httpd
          echo "<h1>Welcome to Portfolio Instance 2</h1>" > /var/www/html/index.html

  myALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: myPortfolioALB
      Scheme: internet-facing
      SecurityGroups:
        - !Ref albsecuritygroup
      Subnets:
        - !Ref publicsubnet1
        - !Ref publicsubnet2
      Type: application

  myTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      VpcId: !Ref portfoliovpc
      Port: 80
      Protocol: HTTP

  myListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref myTargetGroup
      LoadBalancerArn: !Ref myALB
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: arn:aws:acm:us-east-1:147675757919:certificate/cd61881a-5dd9-4f50-877a-f7680204a8bf
